logger.h

typedef enum {
  LG_INFO = 1 << 0,
  LG_ERROR = 1 << 1,
  LG_WARNING = 1 << 2,
  LG_CUSTOM = 1 << 3,
  // Add more levels here
} LgLogLevel;
/*
  Log policies when ring buffer is full
  LG_DROP (default): Drops the log when buffer is full, you lost some log messages
  LG_BLOCK: Blocks the producer thread until there's a unclaimed slot exist
  LG_PRIORITY_BASED: Blocks the producer on log level errors, otherwise it drops
*/
typedef enum {
  LG_DROP = 1 << 0,
  LG_BLOCK = 1 << 1,
  LG_PRIORITY_BASED = 1 << 2,
} LgLogPolicy;
typedef struct Logger Logger;
typedef struct LgString LgString;
typedef struct LgMsgPack LgMsgPack;
/*
  The string struct, used at message pack
  We use LgString to not collide with str.h
*/
struct LgString {
  char* data;
  size_t cap;
  size_t len;
};
// holds 2 dynamic strings
struct LgMsgPack {
  LgString stdout_str;
  LgString file_str;
};
typedef int (*log_formatter_t)(const int isLocalTime, const LgLogLevel level,
                              const char* msg, LgMsgPack* pack);
/*
 * Config struct, this struct can be used in lg_init.
 * localTime: uses your localtime using kernel if it's true
 * printStdout: the logger tries to print message to stdout
   if it's true, otherwise it doesnt
 * logFormatter: this function describes the logging format.
   By default, it is like:
   time level msg
   its parameters: level, formatted message, pack
   returns: nothing (void)
   The pack is that you put stdout and file string messages.
   You can distinguish messages that is gonna be printed to
   stdout or file. Go to pack and string defitions.
   If you wonder how you implement that, go format_msg
   static function or look at the usage folder
   SINCE V3.6: time_str is removed from parameters, that's
   because you can customize time string (already format_msg
   calls get_time_str) and producer doesn't call it anymore
 * logPolicy: the log policy which determines what the logger
   does when the ring buffer is empty
 * maxFiles: maximum amount of .log files that is in the
   logs folder. Non-positive values'll be treated as unlimited
   If this is exceeded, it'll remove the oldest log file
*/
typedef struct {
  int localTime;
  int printStdout;
  int maxFiles;
  LgLogPolicy logPolicy;
  log_formatter_t logFormatter;
} LoggerConfig;
/*
  Main initializer function, Creates Logger instance
  @param logs_dir: const char*, Points a directory path
  (if not exists, it'll try to create). It can be relative or absolute path.
  @param config: LoggerConfig

  RECOMMENDED: on your app's entry point, check its return value like
  if(!lg_init(...)) You dont have to use lg_destroy() if init failed. Because
  if init failed, isAlive set to be 0 and lg_destroy() simply wont work if the
  logger instance is dead
*/
LOGGERDEF int lg_init(Logger* instance, const char* logs_dir,
                      LoggerConfig config);
/*
  Destroys specific logger instance and closes the log file that the instance
  working on if instance = NULL, it tries to destroy active one active_instance
  WONT become NULL
*/
LOGGERDEF int lg_destroy(Logger* instance);
// Implicit instances (uses active one)
LOGGERDEF int lg_finfo(const char* msg);
LOGGERDEF int lg_ferror(const char* msg);
LOGGERDEF int lg_fwarn(const char* msg);
/*
  For FFI, Calls calloc and returns it
*/
LOGGERDEF Logger* lg_alloc();
/*
  For FFI, Calls free
*/
LOGGERDEF void lg_free(Logger* inst);
typedef struct {
  size_t capacity; // power of 2
  size_t mask; // capacity - 1 

  LOGGER_ALIGN ATOMIC(size_t) head; // Producer
  LOGGER_ALIGN size_t tail; // Consumer
  uint8_t slots[];
} LogQueue;
/*
  Instance struct, keeps track the global variables before
*/
struct Logger {
  ATOMIC(bool) isAlive;
  ATOMIC(FILE*) logFile;
  bool isLocalTime;
  bool isPrintStdout;
  log_formatter_t customLogFunc;
  LgLogPolicy logPolicy;
  int maxLogFiles; // non-positive = unlimited

  pthread_t writer_th;
  LogQueue* queue;
};
// main init func
int lg_init(Logger* inst, const char* logs_dir, LoggerConfig config)
{
  if (!inst || !logs_dir) return false;

  inst->isPrintStdout = config.printStdout != 0;
  inst->isLocalTime = config.localTime != 0;
  inst->maxLogFiles = config.maxFiles;
  inst->customLogFunc = config.logFormatter;
  inst->logPolicy = config.logPolicy;

  char dir[PATH_MAX];
  if (!normalize_path(logs_dir, dir, sizeof(dir))) {
    LG_DEBUG_ERR("Provided path is corrupted: %s", logs_dir);
    return false;
  }

  int dir_status = check_dir(dir);  // -1 = NOT valid directory, 0 = NOT exists
  // handle not a valid directory
  if (dir_status == -1) {
    LG_DEBUG_ERR("Provided path is not a valid directory to create: %s", dir);
    return false;
  }

  // handle just non-exist directory (best effort)
  if (dir_status == 0) {
    if (!mkdir_p(dir)) {
      LG_DEBUG_ERR("Cannot create provided path: %s", dir);
      return false;
    }
  } else {
    // get .log files in that logs folder
    char oldestFile[PATH_MAX];
    int files = count_logs_and_get_oldest(dir, oldestFile, sizeof(oldestFile));
    if (files < 0) {
      LG_DEBUG_ERR("Cannot count files and get oldest in %s", dir);
      return false;
    }

    // Remove the oldest file when max files are exceeded
    if (config.maxFiles > 0 && files >= config.maxFiles) {
      remove(oldestFile);
    }
  }

  // get time str and length
  char time_str[LOGGER_TIME_STR_SIZE];
  if (!lg_get_time_str(time_str, config.localTime)) return false;

  // produce file path with a fixed size
  char file_path[PATH_MAX];
  int n = snprintf(file_path, sizeof(file_path),
                  "%s%s" LOGGER_FILE_EXT, dir, time_str);
  if (n <= 0 || (size_t)n >= sizeof(file_path)) return false;

  // open file in write binary mode
  inst->logFile = fopen(file_path, "wb");
  if (!inst->logFile) {
    LG_DEBUG_ERR("Cannot open the log file: %s", file_path);
    return false;
  }

  inst->queue = lg_queue_create(LOGGER_RING_SIZE);
  if (!inst->queue) {
    fclose(inst->logFile);
    LG_DEBUG_ERR("LogQueue cannot be created!");
    return false;
  }

  // create writer thread
  if (pthread_create(&inst->writer_th, NULL, lg_consumer, (void*)inst) != 0) {
    fclose(inst->logFile);
    free(inst->queue);
    LG_DEBUG_ERR("Cannot create writer process thread!");
    return false;
  }

  atomic_store_explicit(&inst->isAlive, true, memory_order_release);
  if (active_instance == NULL) active_instance = inst;
  return true;
}
int lg_destroy(Logger* inst)
{
  if (!inst) {
    if (active_instance)
      inst = active_instance;
    else
      return false;
  }

  // if it is not alive, do not try to destruct
  if (!inst->isAlive) {
    LG_DEBUG_ERR("Logger is already dead!");
    return false;
  }
  atomic_store_explicit(&inst->isAlive, false, memory_order_release);
  pthread_join(inst->writer_th, NULL);

  // clear config after thread exit
  inst->isPrintStdout = false;
  inst->isLocalTime = false;

  // close the file if its not closed
  FILE* f = atomic_load_explicit(&inst->logFile, memory_order_acquire);
  if (f != NULL) {
    if (fclose(f) != 0) {
      LG_DEBUG_ERR("Log file cannot be closed!");
      return false;
    }
    atomic_store_explicit(&inst->logFile, NULL, memory_order_release);
  }

  return true;
}
Logger* lg_alloc()
{
  Logger* tmp = (Logger*)calloc(1, sizeof(Logger));
  if (!tmp) {
    LG_DEBUG_ERR("Cannot allocate Logger instance!");
    return NULL;
  }
  return tmp;
}
void lg_free(Logger* inst)
{
  free(inst->queue);
  free(inst);
}
int lg_finfo(const char* msg)
{
  return lg_flogi(NULL, LG_INFO, msg);
}
int lg_ferror(const char* msg)
{
  return lg_flogi(NULL, LG_ERROR, msg);
}
int lg_fwarn(const char* msg)
{
  return lg_flogi(NULL, LG_WARNING, msg);
}